# docs/swagger.yaml
@@ -93,7 +93,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/task-manager-backend_internal_app_api.ChangePassword'
+          $ref: '#/definitions/internal_app_api.ChangePassword'
       responses:
         "200":
           description: OK
@@ -114,14 +114,14 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/task-manager-backend_internal_app_api.Refresh'
+          $ref: '#/definitions/internal_app_api.Refresh'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/task-manager-backend_internal_app_api.Tokens'
+            $ref: '#/definitions/internal_app_api.Tokens'
       summary: Обновить JWT
       tags:
       - auth
@@ -136,7 +136,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/task-manager-backend_internal_app_api.RestorePasswordEmail'
+          $ref: '#/definitions/internal_app_api.RestorePasswordEmail'
       responses:
         "200":
           description: OK
@@ -154,14 +154,14 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/task-manager-backend_internal_app_api.Auth'
+          $ref: '#/definitions/internal_app_api.Auth'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/task-manager-backend_internal_app_api.Tokens'
+            $ref: '#/definitions/internal_app_api.Tokens'
       summary: Вход в систему
       tags:
       - auth
@@ -176,7 +176,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/task-manager-backend_internal_app_api.Auth'
+          $ref: '#/definitions/internal_app_api.Auth'
       produces:
       - application/json
       responses:
